// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField rendering renders AutoComplete 1`] = `
<div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <div
        class="col-md-4"
      >
        <div
          class="foreman-search-bar"
        >
          <div
            class="autocomplete-search"
          >
            <div
              class="pf-v5-c-input-group"
            >
              <div
                class="pf-v5-c-input-group__item pf-m-fill"
              >
                <div
                  class="pf-v5-c-text-input-group"
                >
                  <div
                    class="pf-v5-c-text-input-group__main pf-m-icon"
                  >
                    <span
                      class="pf-v5-c-text-input-group__text"
                    >
                      <span
                        class="pf-v5-c-text-input-group__icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                          />
                        </svg>
                      </span>
                      <input
                        aria-label="Search input"
                        class="pf-v5-c-text-input-group__text-input"
                        name="Filter[search]"
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="pf-v5-c-input-group__item"
              >
                <button
                  aria-disabled="false"
                  aria-label="Search"
                  class="pf-v5-c-button pf-m-control"
                  data-ouia-component-id="OUIA-Generated-Button-control-3"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="submit"
                >
                  <span
                    class="pf-v5-c-icon"
                  >
                    <span
                      class="pf-v5-c-icon__content pf-v5-m-mirror-inline-rtl"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 448 512"
                        width="1em"
                      >
                        <path
                          d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField rendering renders Date input 1`] = `
<div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <div
        class="col-md-4"
      >
        <div
          class="date-picker-pf-wrapper"
        >
          <div
            class="pf-v5-c-date-picker"
            style="--pf-v5-c-date-picker__input--c-form-control--width-chars: 10;"
          >
            <div
              class="pf-v5-c-date-picker__input"
            >
              <div
                class="pf-v5-c-input-group"
              >
                <div
                  class="pf-v5-c-input-group__item"
                >
                  <span
                    class="pf-v5-c-form-control"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="Date picker"
                      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                      data-ouia-component-type="PF5/TextInput"
                      data-ouia-safe="true"
                      name="a"
                      placeholder="YYYY-MM-DD"
                      type="text"
                      value="2026-06-19"
                    />
                  </span>
                </div>
                <div
                  class="pf-v5-c-input-group__item"
                >
                  <button
                    aria-label="Toggle date picker"
                    class="pf-v5-c-button pf-m-control"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField rendering renders DateTime complex options and error 1`] = `
<div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="date-time"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          DateTime with error
        </span>
      </label>
       
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <div
        class="col-md-4"
      >
        <div
          class="date-time-picker-pf-wrapper"
        >
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-input-group"
            >
              <div
                class="pf-v5-c-input-group__item pf-v5-c-date-picker__input pf-v5-c-date-picker "
              >
                <span
                  class="pf-v5-c-form-control  pf-v5-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    aria-label="date and time picker"
                    data-ouia-component-id="datetime-picker-input"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    id="date-time"
                    name="group[datetime]"
                    placeholder="YYYY-MM-DD HH:MM"
                    type="text"
                    value="1991-01-01 02:12"
                  />
                </span>
              </div>
              <div
                class="pf-v5-c-input-group__item date-picker-input-item"
              >
                <button
                  aria-disabled="false"
                  aria-label="Toggle date picker"
                  class="pf-v5-c-button pf-m-control"
                  data-ouia-component-id="toggle-calendar-button"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 448 512"
                    width="1em"
                  >
                    <path
                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-input-group__item date-picker-input-item"
              >
                <div
                  class="pf-v5-c-date-picker time-picker-pf"
                >
                  <div
                    class="pf-v5-c-date-picker__input"
                    locale="en-US"
                    style="--pf-v5-c-date-picker__input--c-form-control--Width: 150px;"
                  >
                    <div
                      class="pf-v5-c-input-group"
                    >
                      <div
                        class="pf-v5-c-input-group__item"
                      >
                        <div
                          id="time-picker-stable"
                        >
                          <div
                            style="padding-left: 0px;"
                          >
                            <span
                              class="pf-v5-c-form-control pf-m-icon"
                            >
                              <input
                                aria-haspopup="menu"
                                aria-invalid="false"
                                aria-label="Time picker"
                                autocomplete="off"
                                data-ouia-component-id="OUIA-Generated-TextInputBase-8"
                                data-ouia-component-type="PF5/TextInput"
                                data-ouia-safe="true"
                                id="date-time-time-picker"
                                name=""
                                placeholder="hh:mm"
                                type="text"
                                value="02:12"
                              />
                              <span
                                class="pf-v5-c-form-control__utilities"
                              >
                                <span
                                  class="pf-v5-c-form-control__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-form__helper-text"
      >
        <div
          class="pf-v5-c-helper-text"
        >
          <div
            class="pf-v5-c-helper-text__item pf-m-error"
          >
            <span
              aria-hidden="true"
              class="pf-v5-c-helper-text__item-icon"
            >
              <span
                class="pf-v5-c-icon error-icon"
              >
                <span
                  class="pf-v5-c-icon__content"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <span
              class="pf-v5-c-helper-text__item-text"
            >
              can not be in the past
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField rendering renders DateTime input 1`] = `
<div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <div
        class="col-md-4"
      >
        <div
          class="date-time-picker-pf-wrapper"
        >
          <div
            style="display: contents;"
          >
            <div
              class="pf-v5-c-input-group"
            >
              <div
                class="pf-v5-c-input-group__item pf-v5-c-date-picker__input pf-v5-c-date-picker "
              >
                <span
                  class="pf-v5-c-form-control  pf-v5-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    aria-label="date and time picker"
                    data-ouia-component-id="datetime-picker-input"
                    data-ouia-component-type="PF5/TextInput"
                    data-ouia-safe="true"
                    name="a"
                    placeholder="YYYY-MM-DD HH:MM"
                    type="text"
                    value="2026-06-19 23:23"
                  />
                </span>
              </div>
              <div
                class="pf-v5-c-input-group__item date-picker-input-item"
              >
                <button
                  aria-disabled="false"
                  aria-label="Toggle date picker"
                  class="pf-v5-c-button pf-m-control"
                  data-ouia-component-id="toggle-calendar-button"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 448 512"
                    width="1em"
                  >
                    <path
                      d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-v5-c-input-group__item date-picker-input-item"
              >
                <div
                  class="pf-v5-c-date-picker time-picker-pf"
                >
                  <div
                    class="pf-v5-c-date-picker__input"
                    locale="en-US"
                    style="--pf-v5-c-date-picker__input--c-form-control--Width: 150px;"
                  >
                    <div
                      class="pf-v5-c-input-group"
                    >
                      <div
                        class="pf-v5-c-input-group__item"
                      >
                        <div
                          id="time-picker-stable"
                        >
                          <div
                            style="padding-left: 0px;"
                          >
                            <span
                              class="pf-v5-c-form-control pf-m-icon"
                            >
                              <input
                                aria-haspopup="menu"
                                aria-invalid="false"
                                aria-label="Time picker"
                                autocomplete="off"
                                data-ouia-component-id="OUIA-Generated-TextInputBase-5"
                                data-ouia-component-type="PF5/TextInput"
                                data-ouia-safe="true"
                                id="null-time-picker"
                                name=""
                                placeholder="hh:mm"
                                type="text"
                                value="23:23"
                              />
                              <span
                                class="pf-v5-c-form-control__utilities"
                              >
                                <span
                                  class="pf-v5-c-form-control__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField rendering renders Time input 1`] = `
<div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <div
        class="col-md-4"
      >
        <div
          class="pf-v5-c-date-picker time-picker-pf"
        >
          <div
            class="pf-v5-c-date-picker__input"
            locale="en-US"
            style="--pf-v5-c-date-picker__input--c-form-control--Width: 150px;"
          >
            <div
              class="pf-v5-c-input-group"
            >
              <div
                class="pf-v5-c-input-group__item"
              >
                <div
                  id="time-picker-stable"
                >
                  <div
                    style="padding-left: 0px;"
                  >
                    <span
                      class="pf-v5-c-form-control pf-m-icon"
                    >
                      <input
                        aria-haspopup="menu"
                        aria-invalid="false"
                        aria-label="Time picker"
                        autocomplete="off"
                        data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                        data-ouia-component-type="PF5/TextInput"
                        data-ouia-safe="true"
                        name="a"
                        placeholder="hh:mm"
                        type="text"
                        value="23:23"
                      />
                      <span
                        class="pf-v5-c-form-control__utilities"
                      >
                        <span
                          class="pf-v5-c-form-control__icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField rendering renders text complex options and help 1`] = `
<div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-label"
    >
      <label
        class="pf-v5-c-form__label"
        for="text-field"
      >
        <span
          class="pf-v5-c-form__label-text"
        >
          textField
        </span>
      </label>
       
      <div
        style="display: contents;"
      >
        <button
          aria-disabled="false"
          class="pf-v5-c-button pf-m-plain field-help"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF5/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v5-c-icon pf-m-inline"
          >
            <span
              class="pf-v5-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="pf-v5-c-form__group-control"
    >
      <div
        class="col-md-4"
      >
        <span
          class="pf-v5-c-form-control"
        >
          <input
            aria-invalid="false"
            aria-label="text-input-text-field"
            data-ouia-component-id="input-factory-text-input-text-field"
            data-ouia-component-type="PF5/TextInput"
            data-ouia-safe="true"
            id="text-field"
            name="group[textfield]"
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField rendering renders text input 1`] = `
<div>
  <div
    class="pf-v5-c-form__group"
  >
    <div
      class="pf-v5-c-form__group-control"
    >
      <div
        class="col-md-4"
      >
        <span
          class="pf-v5-c-form-control"
        >
          <input
            aria-invalid="false"
            aria-label="text-input-null"
            data-ouia-component-id="input-factory-text-input-null"
            data-ouia-component-type="PF5/TextInput"
            data-ouia-safe="true"
            name="a"
            type="text"
            value=""
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
